# Rosetta-Shape-Core

./: .fieldlink.json  .gitignore  AI_INDEX.json  AI_NOTES.md  CLAUDE.md  Complete Unified System Workflow.md  Core pattern mappings.md  FIELD_ECHO.json  FILE_LIST.md  LIVING_ENTITY.md  Potential blind spots.md  README.md  TOUCH_THIS_FIRST.md  To-Do-List.md  Unified Grounding System.md  ai_integrator.config.yaml  balance.json  fieldlink-pull.sh  geometric_computation_selector_v2.py  next_tasks.unified.json  physics- grounded-protection.py  physics_grounded_protection.py  playground.py  pyproject.toml  recursion.json  shap_compiler.py
Core&Packaging/: README.md
EMERGENT_PATTERN/: Example.json
ai_training/: README.md  entry_pipeline.json  fieldlink_status.json  index.json  module_maturity.json  safe_entry.sh
bridges/: acs-consciousness-bridge.json  ai-arena-bridge.json  curriculum-bridge.json  decay-model-bridge.json  fractal-scope-bridge.json  living-intelligence-bridge.json  mandala-compute-bridge.json  mathematic-economics-bridge.json  narrative-physics-bridge.json  physics-encoder-bridge.json  rosetta-bridges.json  seed-physics-bridge.json  shadow-hunting-bridge.json  soms-bridge.json  taf-wiring-bridge.json  thermodynamic-validation-bridge.json  truth-sensor-bridge.json  voice-integrity-bridge.json
data/: animal_intelligence.json  essence-traits.json  interaction_ontology.json  math_constants.json  narrative-physics-sample.json  sacred_geometry.json  seed-catalog.json  semantic_suppression_model.json  shape_ontology.json  temporal_states.json
docs/: field-coherence-engine.md  growth-pattern-complete-mapping.md  potential-blind-spots.md  unified-bridge-integration-guide.md  unified-bridge-schema.md  (+3 more)
(+244 files in other folders)
